Notes/wxWidgets build errors.txt
wxWidgets build errors.txt

From --disable-odcombobox
../src/propgrid/advprops.cpp: In member function ‘virtual bool wxSystemColourProperty::OnEvent(wxPropertyGrid*, wxWindow*, wxEvent&)’:
../src/propgrid/advprops.cpp:1322:9: error: ‘wxOwnerDrawnComboBox’ was not declared in this scope
         wxOwnerDrawnComboBox* cb =
         ^
../src/propgrid/advprops.cpp:1322:31: error: ‘cb’ was not declared in this scope
         wxOwnerDrawnComboBox* cb =
                               ^
../src/propgrid/advprops.cpp:1323:25: error: ‘wxOwnerDrawnComboBox’ does not name a type
             static_cast<wxOwnerDrawnComboBox*>(propgrid->GetEditorControl());
                         ^
../src/propgrid/advprops.cpp:1323:45: error: expected ‘>’ before ‘*’ token
             static_cast<wxOwnerDrawnComboBox*>(propgrid->GetEditorControl());
                                             ^
../src/propgrid/advprops.cpp:1323:45: error: expected ‘(’ before ‘*’ token
../src/propgrid/advprops.cpp:1323:46: error: expected primary-expression before ‘>’ token
             static_cast<wxOwnerDrawnComboBox*>(propgrid->GetEditorControl());
                                              ^
../src/propgrid/advprops.cpp:1323:77: error: expected ‘)’ before ‘;’ token
             static_cast<wxOwnerDrawnComboBox*>(propgrid->GetEditorControl());
                                                                             ^
Makefile:34832: recipe for target 'propgriddll_advprops.o' failed


Static CB Build related error below; appears to be a configuration issue. Trying monoLib shared to see if error goes away.

/usr/bin/ld: /opt/wx3.1.x_GTK2/lib/libwx_gtk2u_reducedGUI_aui-3.1.a(auilib_framemanager.o): relocation R_X86_64_32 against `_ZN17wxAuiManagerEvent12ms_classInfoE' can not be used when making a shared object; recompile with -fPIC
/opt/wx3.1.x_GTK2/lib/libwx_gtk2u_reducedGUI_aui-3.1.a: error adding symbols: Bad value
collect2: error: ld returned 1 exit status
Makefile:836: recipe for target 'libcodeblocks.la' failed

Most recent build error. Try doing monolithic static build to fix it.
g++: error: /opt/wx3.1.x_GTK2_static/lib/libwx_gtk2u_reducedGUI_propgrid-3.1.a: No such file or directory
g++: error: /opt/wx3.1.x_GTK2_static/lib/libwx_gtk2u_reducedGUI_richtext-3.1.a: No such file or directory
Makefile:836: recipe for target 'libcodeblocks.la' failed
make[3]: *** [libcodeblocks.la] Error 1
make[3]: Leaving directory '/home/stahta01/devel/version_control/codeblocks_reducedGUI-git/src/sdk'

I am thinking "cbMessageOutputNull" is the cause of the problem.
/usr/bin/ld: /opt/wx3.1.x_GTK2_static/lib/libwx_gtk2u_reducedGUI-3.1.a(monolib_appbase.o): relocation R_X86_64_32S against `_ZTV21wxMessageOutputStderr' can not be used when making a shared object; recompile with -fPIC
/opt/wx3.1.x_GTK2_static/lib/libwx_gtk2u_reducedGUI-3.1.a: error adding symbols: Bad value
collect2: error: ld returned 1 exit status
Makefile:836: recipe for target 'libcodeblocks.la' failed

/usr/bin/ld: /opt/wx3.1.x_GTK2_static/lib/libwx_gtk2u_reducedGUI-3.1.a(monolib_treeentry_gtk.o): relocation R_X86_64_32S against `.text' can not be used when making a shared object; recompile with -fPIC
/opt/wx3.1.x_GTK2_static/lib/libwx_gtk2u_reducedGUI-3.1.a: error adding symbols: Bad value
collect2: error: ld returned 1 exit status
Makefile:836: recipe for target 'libcodeblocks.la' failed

../src/generic/dbgrptg.cpp:273:5: error: ‘wxCheckListBox’ does not name a type
     wxCheckListBox *m_checklst;


../src/gtk/filedlg.cpp: In function ‘void gtk_filedialog_ok_callback(GtkWidget*, wxFileDialog*)’:
../src/gtk/filedlg.cpp:60:17: error: ‘wxMessageDialog’ was not declared in this scope
                 wxMessageDialog dlg(dialog, msg, _("Confirm"),

Error when I added option --disable-filepicker
../src/gtk/filepicker.cpp:174:22: error: variable or field ‘file_set’ declared void
 static void file_set(GtkFileChooser* widget, wxDirButton* p)
                      ^
../src/gtk/filepicker.cpp:174:22: error: ‘GtkFileChooser’ was not declared in this scope
../src/gtk/filepicker.cpp:174:38: error: ‘widget’ was not declared in this scope
 static void file_set(GtkFileChooser* widget, wxDirButton* p)
                                      ^
../src/gtk/filepicker.cpp:174:46: error: ‘wxDirButton’ was not declared in this scope
 static void file_set(GtkFileChooser* widget, wxDirButton* p)
                                              ^
../src/gtk/filepicker.cpp:174:59: error: ‘p’ was not declared in this scope
 static void file_set(GtkFileChooser* widget, wxDirButton* p)
                                                           ^
../src/gtk/filepicker.cpp:332:1: error: expected ‘}’ at end of input
 }
 ^
Makefile:18863: recipe for target 'monodll_filepicker.o' failed
make: *** [monodll_filepicker.o] Error 1
stahta01@debian:~/devel/version_control/wxWidgets-git/build_shared_monolib_gtk2_unicode_3.1.x_2.8$ 


Static CB Build error; try adding the flags for C not just C++
/usr/bin/ld: /opt/wx3.1.x_GTK2_static/lib/libwx_gtk2u_reducedGUI-3.1.a(monolib_treeentry_gtk.o): relocation R_X86_64_32S against `.text' can not be used when making a shared object; recompile with -fPIC
/opt/wx3.1.x_GTK2_static/lib/libwx_gtk2u_reducedGUI-3.1.a: error adding symbols: Bad value
collect2: error: ld returned 1 exit status
Makefile:836: recipe for target 'libcodeblocks.la' failed
make[3]: *** [libcodeblocks.la] Error 1
make[3]: Leaving directory '/home/stahta01/devel/version_control/codeblocks_reducedGUI-git/src/sdk'



../src/common/fontmap.cpp: In member function ‘virtual bool wxFontMapper::GetAltForEncoding(wxFontEncoding, wxNativeEncodingInfo*, const wxString&, bool)’:
../src/common/fontmap.cpp:436:41: error: ‘wxMessageBox’ was not declared in this scope
                           m_windowParent) == answer )
                                         ^
Makefile:24422: recipe for target 'monolib_fontmap.o' failed
